kubernetes/apps/smarthome-apps/home-assistant-sgcc/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant-sgcc-egress
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": home-assistant-sgcc
  egress:
    # LLM gateway (omni lane, bill OCR)
    - toServices:
        - k8sService:
            serviceName: agentgateway-proxy
            namespace: networking-system
      toPorts:
        - ports:
            - { port: "80", protocol: TCP }
    # MQTT publish
    - toServices:
        - k8sService:
            serviceName: mosquitto
            namespace: smarthome-apps
      toPorts:
        - ports:
            - { port: "1883", protocol: TCP }
    # DNS
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
    # SGCC website scrape (bill/meter data)
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 169.254.0.0/16
            - 100.64.0.0/10
